--- a/en-spam-he_IL.po
+++ b/en-spam-he_IL.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: en spam\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-12-14 13:03+0200\n"
-"PO-Revision-Date: 2011-12-14 13:11+0200\n"
+"POT-Creation-Date: 2012-08-29 14:38+0200\n"
+"PO-Revision-Date: 2012-08-29 14:40+0200\n"
 "Last-Translator: Amiad Bareli <amiadb [at] gmail>\n"
 "Language-Team: \n"
 "Language: \n"
@@ -12,17 +12,19 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop;__;_e\n"
 "X-Poedit-Basepath: .\n"
-"X-Poedit-SearchPath-0: /home/amiad/desktop/en-spam\n"
+"X-Poedit-SearchPath-0: /home/amiad/projects/en-spam/trunk\n"
 
-# inside "Hebrew" you need write your language.
-#: /home/amiad/desktop/en-spam/en-spam.php:28
+#: /home/amiad/projects/en-spam/trunk/en-spam.php:20
 #, php-format
-msgid "To respond in a different language from Hebrew, you need to enable cookies or add the number %s at the end of the response."
-msgstr "כדי להגיב בשפה שאיננה עברית, עליך לאפשר עוגיות בדפדפן או להוסיף את המספר %s לסוף התגובה."
+msgid "For to post comment, you need to enable cookies and JavaScript or to click on \"%s\" button in this page"
+msgstr "כדי להגיב עליך לאפשר עוגיות וג'אווה סקריפט או ללחוץ על הכפתור \"%s\" בדף הזה."
 
-# inside "Hebrew" you need write your language.
-#: /home/amiad/desktop/en-spam/en-spam.php:29
-#, php-format
-msgid "To respond, you need to enable cookies or add the number %s at the end of the response."
-msgstr "כדי להגיב, עליך לאפשר עוגיות בדפדפן או להוסיף את המספר %s לסוף התגובה."
+#: /home/amiad/projects/en-spam/trunk/en-spam.php:20
+#: /home/amiad/projects/en-spam/trunk/en-spam.php:29
+msgid "Post Comment"
+msgstr "פרסם תגובה"
+
+#: /home/amiad/projects/en-spam/trunk/en-spam.php:24
+msgid "Your comment:"
+msgstr "התגובה שלך:"
 
