--- a/default.pot
+++ b/default.pot
@@ -2,29 +2,36 @@ msgid ""
 msgstr ""
 "Project-Id-Version: en spam\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-29 14:40+0200\n"
-"PO-Revision-Date: 2012-08-29 14:40+0200\n"
-"Last-Translator: Amiad Bareli <amiadb [at] gmail>\n"
+"POT-Creation-Date: 2015-02-16 19:08+0200\n"
+"PO-Revision-Date: 2015-02-16 19:08+0200\n"
+"Last-Translator: Amiad B <translate AT hatul.info>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-KeywordsList: _;gettext;gettext_noop;__;_e\n"
-"X-Poedit-Basepath: .\n"
-"X-Poedit-SearchPath-0: /home/amiad/projects/en-spam/trunk\n"
+"X-Poedit-KeywordsList: _;gettext;gettext_noop;__;_e;_x\n"
+"X-Poedit-Basepath: /srv/http/wp/wp-content/plugins/en-spam/\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 1.7.4\n"
+"X-Poedit-SearchPath-0: /srv/http/wp/wp-content/plugins/en-spam\n"
 
-#: /home/amiad/projects/en-spam/trunk/en-spam.php:20
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:27
 #, php-format
-msgid "For to post comment, you need to enable cookies and JavaScript or to click on \"%s\" button in this page"
+msgid ""
+"For to post comment, you need to enable cookies and JavaScript or to click "
+"on \"%s\" button in this page"
 msgstr ""
 
-#: /home/amiad/projects/en-spam/trunk/en-spam.php:20
-#: /home/amiad/projects/en-spam/trunk/en-spam.php:29
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:27
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:36
 msgid "Post Comment"
 msgstr ""
 
-#: /home/amiad/projects/en-spam/trunk/en-spam.php:24
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:31
 msgid "Your comment:"
 msgstr ""
 
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:58
+msgid "Blocked Spambots by En Spam"
+msgstr ""
