--- a/en-spam-he_IL.po
+++ b/en-spam-he_IL.po
@@ -2,29 +2,36 @@ msgid ""
 msgstr ""
 "Project-Id-Version: en spam\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-29 14:38+0200\n"
-"PO-Revision-Date: 2012-08-29 14:40+0200\n"
-"Last-Translator: Amiad Bareli <amiadb [at] gmail>\n"
+"POT-Creation-Date: 2015-02-16 19:08+0200\n"
+"PO-Revision-Date: 2015-02-16 19:10+0200\n"
+"Last-Translator: Amiad B <translate AT hatul.info>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: he_IL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop;__;_e\n"
 "X-Poedit-Basepath: .\n"
+"X-Generator: Poedit 1.7.4\n"
 "X-Poedit-SearchPath-0: /home/amiad/projects/en-spam/trunk\n"
 
-#: /home/amiad/projects/en-spam/trunk/en-spam.php:20
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:27
 #, php-format
-msgid "For to post comment, you need to enable cookies and JavaScript or to click on \"%s\" button in this page"
-msgstr "כדי להגיב עליך לאפשר עוגיות וג'אווה סקריפט או ללחוץ על הכפתור \"%s\" בדף הזה."
+msgid ""
+"For to post comment, you need to enable cookies and JavaScript or to click "
+"on \"%s\" button in this page"
+msgstr ""
+"כדי להגיב עליך לאפשר עוגיות וג'אווה סקריפט או ללחוץ על הכפתור \"%s\" בדף הזה."
 
-#: /home/amiad/projects/en-spam/trunk/en-spam.php:20
-#: /home/amiad/projects/en-spam/trunk/en-spam.php:29
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:27
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:36
 msgid "Post Comment"
 msgstr "פרסם תגובה"
 
-#: /home/amiad/projects/en-spam/trunk/en-spam.php:24
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:31
 msgid "Your comment:"
 msgstr "התגובה שלך:"
 
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:58
+msgid "Blocked Spambots by En Spam"
+msgstr "כמה בוטים en spam חסם"
