--- a/en-spam-he_IL.po
+++ b/en-spam-he_IL.po
@@ -35,3 +35,7 @@ msgstr "התגובה שלך:"
 #: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:58
 msgid "Blocked Spambots by En Spam"
 msgstr "כמה בוטים en spam חסם"
+
+#: /srv/http/wp/wp-content/plugins/en-spam/en-spam.php:75
+msgid "Enable JavaScript and cookies"
+msgstr "יש לאפשר JavaScript ועוגיות"
